Added Github Workflow

--- a/.github/workflows/tanzu-deploy.yaml
+++ b/.github/workflows/tanzu-deploy.yaml
@@ -17,7 +17,7 @@ jobs:
       - name: Deploy application to Tanzu Platform
         uses: cpage-pivotal/tanzu-deploy-action@v1.3
         with:
-          tanzu_api_token: ${{ secrets.TanzuApiToken }}
+          tanzu_api_token: "1pZI-QhoPsx1Mxp_faGuq7U1gMS2kfYPI1KslPwRRV5WzKuIHPJhfUxQ03jz-ITA" 
           container_registry: demo.goharbor.io/zalam/sensors-workshop
           buildPlanSource: custom-build-plan
           project: workshop01
